B10 A1 Assignment complete without responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>B10 First Assignment</title>
-</head>
-<body>
-    
-</body>
+    <!-- custom Css -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="">Awlad.H</a></li>
+          <li>
+            <a href=""><button class="btn">Download Resume</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-container">
+          <img src="assets/Group.png" alt="" />
+          <h3 class="banner-title">
+            "In the near future, I hope to become a Developer."
+          </h3>
+          <p class="banner-desc">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+          <button class="btn-secondary">Contact with me</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="coding">
+        <h2 class="section-title">Why Web Development??</h2>
+        <p class="section-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+
+        <div class="coding-explore">
+          <div class="coding-card">
+            <h3>I will Do Coding and Change The World</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn">Learn More</button>
+        </div>
+        <img src="assets/Layer_1.png" alt="">
+        </div>
+        <div class="coding-explore">
+          <img src="assets/Group 3.png" alt="">
+          <div class="coding-card">
+            <h3>I will help People by creating Modern Web System</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn">Learn More</button>
+        </div>
+        </div>
+        <div class="coding-explore">
+          <div class="coding-card">
+            <h3>I will Do Coding and Change The World</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn">Learn More</button>
+        </div>
+        <img src="assets/Group 4.png" alt="">
+        </div> 
+      </section>
+      <section class="inspiring">
+        <h2 class="section-title">My Inspiration</h2>
+        <p class="section-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <div class="inspiring-video">
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/FKPyMbJieQM?si=brq1vfhuLEuNbnV8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="current-target" style="margin: 100px 0;">
+        <h2 class="section-title">My Current Target</h2>
+        <p class="section-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+
+        <div class="current-container">
+          <div class="current-card first">
+            <img src="assets/html.png" alt="">
+            <h2 class="card-title">HTML</h2>
+            <p class="card-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+            <a href="" class="learn">Learn More</a>
+          </div>
+          <div class="current-card second">
+            <img src="assets/css.png" alt="">
+            <h2 class="card-title">HTML</h2>
+            <p class="card-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+            <a href="" class="learn">Learn More</a>
+          </div>
+          <div class="current-card third">
+            <img src="assets/js.png" alt="">
+            <h2 class="card-title">HTML</h2>
+            <p class="card-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+            <a href="" class="learn">Learn More</a>
+          </div>
+        </div>
+      </section>
+      <section class="next-target">
+        <h2 class="section-title">My Next Target</h2>
+        <p class="section-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <div class="next-target-container">
+          <div class="next-target-card">
+            <img src="assets/react.png" alt="">
+            <div class="next-card">
+              <h3>ReactJS</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="" class="learn">Learn More</a>
+          </div>
+          </div>
+          <div class="next-target-card">
+            <img src="assets/nodejs.png" alt="">
+            <div class="next-card">
+              <h3 >NodeJs</h3>
+              <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="" class="learn">Learn More</a>
+          </div>
+          </div>
+          <div class="next-target-card">
+            <img src="assets/mongodb.png" alt="">
+            <div class="next-card">
+              <h3 >MongoDB</h3>
+              <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="" class="learn">Learn More</a>
+          </div>
+          </div>
+        </div>
+      </section>
+      <section class="support">
+        <div class="support-container">
+          <h3>I need Support</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and  <br>typesetting industry.</p>
+          <form action="">
+            <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+            <input type="submit" value="Submit">
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>An Open Commitment by Awlad Hossain</p>
+      <ul>
+        <li><a href=""><img src="assets/facebook.png" alt=""></a></li>
+        <li><a href=""><img src="assets/github.png" alt=""></a></li>
+        <li><a href=""><img src="assets/linkedin-icon 1.png" alt=""></a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
